--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="center">
+        <input id="NumInput" onchange="onNumChange(event)">
+        <button onclick="onDraw()">Draw</button>
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
